# rm-document

./: Cargo.toml  LICENSE-MIT  README.md
data/: 713e619e-ed13-4157-81d6-9a6a311cf99b.content  713e619e-ed13-4157-81d6-9a6a311cf99b.metadata  713e619e-ed13-4157-81d6-9a6a311cf99b.pagedata
examples/: doc2pdf.rs  lines2pdf.rs  template.rs
src/: doc.rs  lib.rs  meta.rs  page.rs  pdf.rs  template.rs
