[package]
name = "rm-document"
description = "Library for parsing reMarkable documents and exporting them to other formats"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/torrancew/rm-document"
keywords = ["remarkable", "lines", "pdf"]
categories = ["multimedia::encoding", "parser-implementations", "rendering::data-formats"]

[[example]]
name = "doc2pdf"

[dependencies]
genpdf = { version = "0.2.0", features = ["images"] }
printpdf = "0.5.2"
rm-lines = "^0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
uuid = { version = "1.1.1", features = ["serde"] }

[dev-dependencies]
anyhow = "1.0.57"
