[package]
name = "rm-document"
description = "Library for parsing reMarkable documents and exporting them to other formats"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/torrancew/rm-document"
keywords = ["remarkable", "lines", "pdf"]
categories = ["multimedia::encoding", "parser-implementations", "rendering::data-formats"]

[[example]]
name = "doc2pdf"

[[example]]
name = "template"

[dependencies]
genpdf = { version = "0.2.0", features = ["images"] }
image = { version = "0.24.2", default-features = false, features = ["png"] }
printpdf = { version = "0.5.2", features = ["svg"] }
rm-lines = "^0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
uuid = { version = "1.1.1", features = ["serde"] }

[dev-dependencies]
anyhow = "1.0.57"
